Add design/file changes. For a better understanding of the page

--- a/index.html
+++ b/index.html
@@ -16,31 +16,14 @@
     <link rel="stylesheet" href="./style.css">
     <title>Solar Power</title>
 </head>
-<body data-bs-spy="scroll" data-bs-target="#navbarText" data-offset="50" tabindex="0">
+<body>
     <!--Navigation-->
-    <header>
-    <nav id="navbar" class="navbar fixed-top navbar-expand-lg navbar-dark">
-                <div class="container-fluid"> 
-                <a href="#" class="navbar-brand">Solar Power</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarText">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#about">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a  class="nav-link" href="#contact">Contact</a>
-                        </li>
-                        
-                </ul>
-                </div>
-            </div>
-            </nav>
-        </header>
+<nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
+    <div class="container">
+    <a href="#" class="navbar-brand">Solar Power</a>
+    </div>
+
+</nav>
     <!--Hero Section-->
     <main>
     <section id="home" class="hero">
@@ -54,7 +37,7 @@
                     <div class="hero-titel">Solar energy that opens opportunities for you & your surrounding.
                     <h5 class="hero-p"> Solar Energy! Sustainable Solution to impact<br> the world, abroad & beyond!</h5>
                     <button id="switch" onclick="toggleTheme()">Magic Button</button>
-                    <a class="hero-cta" href="#about" role="button">Learn More</a>  
+                    <a class="hero-cta" href="#about" role="button">Learn More</a> 
                 </div>
     </div>
             </div>
