Add new navigation layout. Keeping everything contained

--- a/index.html
+++ b/index.html
@@ -22,6 +22,28 @@
     <div class="container">
     <a href="#" class="navbar-brand">Solar Power</a>
     </div>
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a href="#" class="nav-link active" aria-current="page">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Researh Solar</a>
+                </li>
+               <li class="nav-item">
+                   <a href="#" class="nav-link">FAQs</a>
+               </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Contact</a>
+                </li>                       
+        </ul>
+    </div>
 
 </nav>
     <!--Hero Section-->
