--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
 <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
     <div class="container">
     <a href="#" class="navbar-brand">Solar Power</a>
-    </div>
     <div class="collapse navbar-collapse">
-        <ul class="navbar-nav">
-                <li class="nav-item">
+        <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
                     <a href="#" class="nav-link active" aria-current="page">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Features</a>
+                    <a href="#features" class="nav-link">Features</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Researh Solar</a>
+                    <a href="#learn" class="nav-link">Research Solar</a>
                 </li>
                <li class="nav-item">
-                   <a href="#" class="nav-link">FAQs</a>
+                   <a href="#questions" class="nav-link">FAQs</a>
                </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">About</a>
+                    <a href="#about" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
-                </li>                       
+                    <a href="#contact" class="nav-link">Contact</a>
+            </li>                       
         </ul>
+    </div>
     </div>
 
 </nav>
