--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@
 <nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
     <div class="container">
     <a href="#" class="navbar-brand">Solar Power</a>
-    <div class="collapse navbar-collapse">
+    
+    <button
+     class="navbar-toggler" 
+      type="button"
+      data-bs-toggle="collapse" 
+      data-bs-target="#navbar"
+      >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbar">
         <ul class="navbar-nav ms-auto">
             <li class="nav-item">
                     <a href="#" class="nav-link active" aria-current="page">Home</a>
