Add the new hero showcase layout for the hero section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <!--Navigation-->
-<nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top">
+<nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top py-3">
     <div class="container">
     <a href="#" class="navbar-brand">Solar Power</a>
     
@@ -57,24 +57,21 @@
 
 </nav>
     <!--Hero Section-->
-    <main>
-    <section id="home" class="hero">
-        <!--image/layout inspiration documented in readme file-->
-        <div class="container col-xxl-8 px-4 py-5">
-            <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-                <div class="col-10 col-sm-8 col-lg-6">
-                    <img class="d-block mx-lg-auto img-fluid" src="./assets/img/panel.svg" width="700" height="500" loading="lazy" alt="biking to the panel">
-                </div>
-                <div class="container">
-                    <div class="hero-titel">Solar energy that opens opportunities for you & your surrounding.
-                    <h5 class="hero-p"> Solar Energy! Sustainable Solution to impact<br> the world, abroad & beyond!</h5>
+    <section class="bg-light text-dark p-5 text-center text-sm-start">
+        <div class="container">
+            <div class="d-sm-flex align-items-center justify-content-between">
+                <div>
+                    <h1>Solar energy that opens opportunities for you & your surrounding.</h1>
+                    <p class="lead my-4">
+                        Solar Energy! Sustainable Solution to impact the world, abroad & beyond!
+                    </p>
                     <button id="switch" onclick="toggleTheme()">Magic Button</button>
-                    <a class="hero-cta" href="#about" role="button">Learn More</a> 
+                    <a class="hero-cta" href="#about" role="button">Learn More</a>
                 </div>
-    </div>
+                <img class="img-fluid w-50 d-none d-sm-block" src="./assets/img/streetfood.svg">
             </div>
-      </section>
-      </main>
+        </div>
+    </section>
     <!--About Section-->                         
     <section id="about" class="info-section">
         <img class="solar-img" src="./assets/img/solar.jpg" alt="Illustration of the world">
