Add Feature titles

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <div class="card">
                 <img src="./assets/img/turbine.jpg" class="card-img-top img-fluid" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Renewable Energy Source</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
               </div>
@@ -87,7 +87,7 @@
               <div class="card">
                 <img src="./assets/img/sun-above.jpg" class="card-img-top img-fluid" alt="Sunset up above">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Low Operating Costs</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
               </div>
@@ -96,7 +96,7 @@
               <div class="card">
                 <img src="./assets/img/square-bridge.jpg" class="card-img-top img-fluid" alt="sun under the bridge">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Weather Dependent</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
                 </div>
               </div>
@@ -105,7 +105,7 @@
               <div class="card">
                 <img src="./assets/img/universe.jpg" class="card-img-top img-fluid" alt="universal lights">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">CO₂-Free</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
               </div>
