--- a/index.html
+++ b/index.html
@@ -71,42 +71,42 @@
             </div>
         </div>
     </section>
-    <section class="features" id="features">
+    <section class="features p-5" id="features">
         <div class="container">
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
-              <div class="card">
+              <div class="card h-100">
                 <img src="./assets/img/turbine.jpg" class="card-img-top img-fluid" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Renewable Energy Source</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">Solar panels produce electricity by transforming the continuous flow of energy from the sun to electricity.</p>
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="card">
+              <div class="card h-100">
                 <img src="./assets/img/sun-above.jpg" class="card-img-top img-fluid" alt="Sunset up above">
                 <div class="card-body">
                   <h5 class="card-title">Low Operating Costs</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">The photovoltaic process that transforms sunlight into electricity doesn’t require any fuel and has no variable costs.</p>
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="card">
+              <div class="card h-100">
                 <img src="./assets/img/square-bridge.jpg" class="card-img-top img-fluid" alt="sun under the bridge">
                 <div class="card-body">
                   <h5 class="card-title">Weather Dependent</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">Although solar energy can still be collected during cloudy and rainy days, the efficiency of the solar system drops.</p>
                 </div>
               </div>
             </div>
             <div class="col">
-              <div class="card">
+              <div class="card h-100">
                 <img src="./assets/img/universe.jpg" class="card-img-top img-fluid" alt="universal lights">
                 <div class="card-body">
                   <h5 class="card-title">CO₂-Free</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text">No harmful emissions are released into the air when electricity is produced by solar panels.</p>
                 </div>
               </div>
             </div>
