Update readme file. Sources for inspiration added

--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
             </div>
         </div>
     </section>
+    <!--Feature Section-->
+    <!--Sources that helped me create this section added in Readme.md file-->
     <section class="features p-5" id="features">
         <div class="container">
         <div class="row row-cols-1 row-cols-md-2 g-4">
