--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
     </section>
     <section id="learn" class="research-solar">
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -134,22 +134,22 @@
               <div class="carousel-item active">
                 <img src="./assets/img/img-2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5>Limitless solar energy</h5>
+                  <p>As a renewable energy source, the only limitation of solar power is our ability to turn it into electricity in an efficient and cost-effective way.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./assets/img/img-3.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5>Solar energy - a clean source</h5>
+                  <p>Solar power is a very important energy source in the move to clean energy production.</p>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="./assets/img/img-6.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>No fuel to burn</h5>
+                  <p>Fuel isn’t required, and this means that solar power can create large amounts of electricity without the uncertainty and expense of securing a fuel supply.</p>
                 </div>
               </div>
             </div>
@@ -161,6 +161,14 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
+          </div>
+          <div class="container p-5">
+            <div class="card text-center">
+                <div class="card-body">
+                  <h5 class="card-title">Dive deeper in the quest for a better cleaner world</h5>
+                  <a href="https://www.energy.gov/eere/solar/how-does-solar-work" target="_blank" class="btn btn-primary">Explore</a>
+                </div>
+              </div>
           </div>     
     </section>
     <section>
