--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div>
                     <h1>Solar energy that opens opportunities for you & your surrounding.</h1>
                     <p class="lead my-4">
-                        Solar Energy! Sustainable Solution to impact the world, abroad & beyond!
+                      Sustainable Solution to impact the world, abroad & beyond!
                     </p>
                     <a class="hero-cta" href="#about" role="button">Learn More</a>
                 </div>
