--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <p class="lead my-4">
                       Sustainable Solution to impact the world, abroad & beyond!
                     </p>
-                    <a class="hero-cta" href="#about" role="button">Learn More</a>
+                    <a class="hero-cta btn btn-secondary" href="#about" role="button">Learn More</a>
                 </div>
                 <img class="img-fluid w-50 d-none d-sm-block" src="./assets/img/streetfood.svg">
             </div>
@@ -176,7 +176,6 @@
     </section>
     <!--About Section-->                         
     <section id="about" class="info-section">
-        <img class="solar-img" src="./assets/img/solar.jpg" alt="Illustration of the world">
         <h2>About</h2>
     <div class="float-container">
         <div class="float-child">
