Update readme file. Sources about the research section added.

--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
           </div>
         </div>
     </section>
+    <!--Research Solar Section-->
+    <!--Links, Documented in the readme file-->
     <section id="learn" class="research-solar">
         <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-indicators">
