--- a/index.html
+++ b/index.html
@@ -46,9 +46,6 @@
                    <a href="#questions" class="nav-link">FAQs</a>
                </li>
                 <li class="nav-item">
-                    <a href="#about" class="nav-link">About</a>
-                </li>
-                <li class="nav-item">
                     <a href="#contact" class="nav-link">Contact</a>
             </li>                       
         </ul>
@@ -167,34 +164,69 @@
           <div class="container p-5">
             <div class="card text-center">
                 <div class="card-body">
-                  <h5 class="card-title">Dive deeper in the quest for a better cleaner world</h5>
+                  <h5 class="card-title">Dive deeper in the quest for a better cleaner world!</h5>
                   <a href="https://www.energy.gov/eere/solar/how-does-solar-work" target="_blank" class="btn btn-primary">Explore</a>
                 </div>
               </div>
-          </div>     
+          </div>
+          <!--Calculator goes here-->    
     </section>
-    <section>
-
+    <!--FAQs Section-->
+    <section id="questions" class="bg-dark p-5">
+        <div class="container">
+            <h2 class="text-center p-5 text-light">Frequently asked questions</h2>
+            <div class="accordion accordion-flush" id="accordionExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                      What is Solar Power?
+                    </button>
+                  </h2>
+                  <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        A power generation method that converts energy from the sun into electricity. It uses solar panels that are often arranged on a building or concentrated in solar farms to facilitate a reaction that converts sun’s light radiation into electricity.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                      How do solar panels work?
+                    </button>
+                  </h2>
+                  <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        Photovoltaic cells in a solar panel turn sunlight into direct current electricity (DC). Then, an inverter converts the DC electricity into alternating current electricity (AC), and once this process has taken place, the electricity is used, fed into the grid or stored in a battery.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                      Are solar panels expensive?
+                    </button>
+                  </h2>
+                  <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        The cost depends on the number of panels and how/where they are installed, but generally, solar power is becoming more affordable every year. Solar power is the crucial future production method in the move to clean energy, and as economies of scale drive prices down, its importance will only increase.
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        What are the advantages of solar power?
+                      </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+                      <div class="accordion-body">
+                        The main advantage is that it is a renewable, clean source of electricity. Solar power is also scalable. This means that it can be deployed on an industrial scale, or it can be used to power a single household. When it’s used on a small scale, extra electricity can be stored in a battery or fed back into the electricity grid. Overall, the sun gives off far more energy than we’ll ever need. The only limitation is our ability to convert it to electricity in a cost-effective way.
+                      </div>
+                    </div>
+                  </div>
+              </div>
+        </div>
     </section>
-    <!--About Section-->                         
-    <section id="about" class="info-section">
-        <h2>About</h2>
-    <div class="float-container">
-        <div class="float-child">
-            <div class="box-1">
-            <h4>How does Solar Energy Work</h4> 
-        <p class="info">A solar panel also known as a solar module consists of a layer of silicon cells, a metal frame, a glass casing unit, and wiring to transfer electric current from the silicon. When light hits a silicon cell, the light causes electrons in the silicon to be set in motion, initiating a flow of electric current. This is known as the “photovoltaic effect,” and it describes the general functionality of solar panel tech.</p>
-    </div>
-    </div>
-    <div class="float-child">
-        <div class="box-2">
-        <h4>New Power Source</h4>                    
-        <p class="info2">Solar energy is a clean, inexpensive, renewable power source that is harnessable nearly everywhere in the world - any point where sunlight hits the surface of the earth is a potential location to generate solar power. And since solar energy comes from the sun, 
-        it represents a limitless source of power. Renewable energy technologies generate electricity from resources that are infinite. Compare, for instance, producing electricity with renewable resources to doing so with fossil fuels. <a class="info-link" href="https://www.energysage.com/solar/" target="_blank" role="link">Read More</a></p> 
-    </div>
-    </div>
-</div>
-    </section> 
     <!--Contact Section-->                            
     <section id="contact" class="contact-section">
         <div class="container">
