Add heading to conact form

--- a/index.html
+++ b/index.html
@@ -230,9 +230,9 @@
     <!--Contact Section-->                            
     <section id="contact" class="contact-section">
         <div class="container">
+            <h3 class="text-center p-5">Get In Touch</h3>
            <form class="contact-form" action="https://formdump.codeinstitute.net/" method="POST" target="_blank">
             <div class="container">
-            <div class="form-title">Contact</div>
             <div class="mb-3">
             <input  class="area1" type="text" name="name" id="name" placeholder="Name:" required>
         </div>
