Link hero button to research section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <p class="lead my-4">
                       Sustainable Solution to impact the world, abroad & beyond!
                     </p>
-                    <a class="hero-cta btn btn-secondary" href="#about" role="button">Learn More</a>
+                    <a class="hero-cta btn btn-secondary" href="#learn" role="button">Learn More</a>
                 </div>
                 <img class="img-fluid w-50 d-none d-sm-block" src="./assets/img/streetfood.svg">
             </div>
