--- a/index.html
+++ b/index.html
@@ -228,8 +228,9 @@
         </div>
     </section>
     <!--Contact Section-->                            
-    <section id="contact" class="contact-section">
+    <section id="contact" class="contact-section p-5 text-center">
         <div class="container">
+          <div class="row g-4">
             <h3 class="text-center p-5">Get In Touch</h3>
            <form class="contact-form" action="https://formdump.codeinstitute.net/" method="POST" target="_blank">
             <div class="container">
@@ -248,6 +249,7 @@
     </div>
     </div>
     </form>
+    </div>
     </div>
     </section>  
     <!--Footer inspiration from last project-->
