Add final theme Switch colors

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <!--Navigation-->
-<nav class="navbar navbar-expand-lg bg-light navbar-light fixed-top py-3">
+<nav class="navbar navbar-expand-lg fixed-top py-3">
     <div class="container">
     <a href="#" class="navbar-brand">Solar Power</a>
     
@@ -54,7 +54,7 @@
 
 </nav>
     <!--Hero Section-->
-    <section class="bg-light text-dark p-5 text-center text-sm-start">
+    <section class="theme-1 p-5 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
@@ -70,7 +70,7 @@
     </section>
     <!--Feature Section-->
     <!--Sources that helped me create this section added in Readme.md file-->
-    <section class="features p-5" id="features">
+    <section class="theme-1 features p-5" id="features">
         <div class="container">
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
@@ -122,7 +122,7 @@
     </section>
     <!--Research Solar Section-->
     <!--Links, Documented in the readme file-->
-    <section id="learn" class="research-solar">
+    <section id="learn" class="theme-1 research-solar">
         <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -227,7 +227,8 @@
               </div>
         </div>
     </section>
-    <section>
+    <!--Theme Switch Section-->
+    <section class="theme-1">
       <div class="container p-5">
       <div class="card text-center">
         <div class="card-body">
