Add different class namefor card titles. This is done so there won't be no complications when connecting colors in theme switch.

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <div class="container p-5">
             <div class="card text-center">
                 <div class="card-body">
-                  <h5 class="card-title">Dive deeper in the quest for a better cleaner world!</h5>
+                  <h5 class="themecard-title">Dive deeper in the quest for a better cleaner world!</h5>
                   <a href="https://www.energy.gov/eere/solar/how-does-solar-work" target="_blank" class="btn btn-primary">Explore</a>
                 </div>
               </div>
@@ -232,7 +232,7 @@
       <div class="container p-5">
       <div class="card text-center">
         <div class="card-body">
-          <h5 class="card-title pb-3">Add More Traits To Your Liking!</h5>
+          <h5 class=" themecard-title pb-3">Add More Traits To Your Liking!</h5>
           <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">More Options</a>
           <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
             <div class="offcanvas-header">
