--- a/index.html
+++ b/index.html
@@ -272,28 +272,8 @@
     </form>
     </div>
     </section>
-    <!--Google Maps API
-    <div class="container">
-    <h3 class="text-center p-5">Google Maps</h3>
-
-<div id="googleMap" 
-  style="width:100%;
-   height:400px;">
-</div>
-
-<script>
-function myMap() {
-var mapProp= {
-  center:new google.maps.LatLng(51.508742,-0.120850),
-  zoom:5,
-};
-var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
-}
-</script>
-</div>
-
-<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY&callback=myMap"></script> 
---> 
+    <!--Google Maps API-->
+<div id="map"></div>
     <!--Footer inspiration from last project-->
     <footer class="footer bg bg-dark">
         <div class="container-fluid">
@@ -321,6 +301,11 @@ var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
 
     </footer>                              
    <script src="./app.js"></script>
+   <script src="./map.js"></script>
+   <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBNwtZtJYuU6Cb7eIT1mKfeRgd_zyf_OY&callback=initMap&libraries=&v=weekly"
+      async
+    ></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
 </body>
 </html>  
