Add Quiz buttons and container

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                     <a href="#features" class="nav-link">Features</a>
                 </li>
                 <li class="nav-item">
+                  <a href="#quiz" class="nav-link">Quiz</a>
+              </li>
+                <li class="nav-item">
                     <a href="#learn" class="nav-link">Research Solar</a>
                 </li>
                <li class="nav-item">
@@ -120,6 +123,16 @@
           </div>
         </div>
     </section>
+    <section id="quiz" class="bg-dark p-5">
+      <h3 class="text-center">Test out your knowledge with this Quiz!</h3>
+      <div class="container">
+        <div id="quiz"></div>
+      </div>
+      <button id="back">Go Back</button>
+      <button id="next">Next Question</button>
+      <button id="submit">Submit Question</button>
+      <div id="results"></div>
+    </section>
     <!--Research Solar Section-->
     <!--Links, Documented in the readme file-->
     <section id="learn" class="theme-1 research-solar">
@@ -168,8 +181,7 @@
                   <a href="https://www.energy.gov/eere/solar/how-does-solar-work" target="_blank" class="btn btn-primary">Explore</a>
                 </div>
               </div>
-          </div>
-          <!--Calculator goes here-->    
+          </div>     
     </section>
     <!--FAQs Section-->
     <section id="questions" class="bg-dark p-5">
@@ -299,6 +311,7 @@
 
     </footer>                              
    <script src="./app.js"></script>
+   <script src="./quiz.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
 </body>
 </html>  
