--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           </div>
         </div>
     </section>
-    <section id="quiz" class="bg-dark p-5">
+    <section id="quiz" class="bg-light p-5">
       <h3 class="text-center">Test out your knowledge with this Quiz!</h3>
       <div class="container">
         <div id="quiz"></div>
