Add more features to each file

--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
           </div>
         </div>
     </section>
-    <section id="quiz" class="bg-light p-5">
-      <h3 class="text-center">Test out your knowledge with this Quiz!</h3>
-      <div class="container">
+    <section id="quiz" class="body bg-light p-5">
+      <h3 class="text-center text-dark">Test out your knowledge with this Quiz!</h3>
+      <div class="quiz-container">
         <div id="quiz"></div>
       </div>
-      <button id="back">Go Back</button>
+      <button id="previous">Go Back</button>
       <button id="next">Next Question</button>
       <button id="submit">Submit Question</button>
       <div id="results"></div>
